k8s/labs/security/gatekeeper/noncompliant-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: uncompliant-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.25-alpine
